# malleus-dev

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  KNOWLEDGE_GRAPH_PROTOCOL.md  ONTOLOGY_PROTOCOL.md
ontology/: malleus.yaml
ontology/domains/: attack.yaml  cyp450.yaml
src/malleus/: __init__.py  kg.py  ontology.py  prolog_verifier.py
tests/: test_kg.py  test_ontology.py  test_prolog_verifier.py
